--- a/Strategik.Tool.App/Src/Strategik.Tool.App/App.config
+++ b/Strategik.Tool.App/Src/Strategik.Tool.App/App.config
@@ -61,8 +61,12 @@
 	</runtime>
 	<appSettings>
 		<add key="SourceDirectory" value="E:\TestFiles" />
+		<add key="DestinationDirectory" value="Test Files" />
+		<add key="FileFilter" value="*.txt" />
+		<add key="SiteID" value="strategikoffice365.sharepoint.com" />
 		<add key="AppID" value="4b701119-9334-4737-9271-a61c15207211" />
 		<add key="ClientSecrect" value="79y8Q~a0xMA.kht-zgp-A3exCFOR2HFi9DFG2aRf" />
 		<add key="TenantID" value="af058964-6af6-45b9-8f74-9d92a5b2ee25" />
+		<add key="ArchivePath" value="E:\Archive" />
 	</appSettings>
 </configuration>
